feat: use Z.ai coding plan endpoint, add AI provider rate limit handling
- Default base URL now uses coding plan endpoint: api.z.ai/api/coding/paas/v4
- Add AI_PROVIDER_UNAVAILABLE error code for Z.ai rate limits (429, codes 1302-1310)
- Friendly user message: 'AI service is temporarily busy. Please try again in a few minutes.'
- Error flows through existing toast system on frontend

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
 GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
 
 ###### AI (GLM / OpenAI-compatible) ######
-# International: https://api.z.ai/api/paas/v4 | China: https://open.bigmodel.cn/api/paas/v4
-GLM_BASE_URL="https://api.z.ai/api/paas/v4"
+# Coding Plan: https://api.z.ai/api/coding/paas/v4 | Regular: https://api.z.ai/api/paas/v4 | China: https://open.bigmodel.cn/api/paas/v4
+GLM_BASE_URL="https://api.z.ai/api/coding/paas/v4"
 # API key from Z.ai: https://z.ai/model-api
 GLM_API_KEY="YOUR_GLM_API_KEY"
 # Model IDs (defaults shown — override as needed)
