refactor: switch to zhipu-ai-provider from @ai-sdk/openai-compatible
Dedicated community provider with native support for GLM models:
- Vision, reasoning, tools, streaming, structured output
- Proper Z.ai/Zhipu API handling via createZhipu
- Replaces generic openai-compatible adapter

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
 GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
 GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
 
-###### AI (GLM / OpenAI-compatible) ######
+###### AI (GLM / Zhipu AI) ######
 # Coding Plan: https://api.z.ai/api/coding/paas/v4 | Regular: https://api.z.ai/api/paas/v4 | China: https://open.bigmodel.cn/api/paas/v4
 GLM_BASE_URL="https://api.z.ai/api/coding/paas/v4"
 # API key from Z.ai: https://z.ai/model-api
