--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ai-sdk/openai-compatible": "^1.0.33",
     "@ai-sdk/react": "^2.0.28",
     "@base-ui-components/react": "1.0.0-beta.2",
     "@dnd-kit/core": "^6.3.1",
@@ -105,6 +104,7 @@
     "use-scramble": "^2.2.15",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
+    "zhipu-ai-provider": "^0.2.2",
     "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
