--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "generate-theme-registry": "tsx scripts/generate-theme-registry.ts && tsx scripts/generate-registry.ts",
     "minify-live-preview": "pnpm dlx terser public/live-preview.js -o public/live-preview.min.js -c -m",
     "prebuild": "pnpm generate-theme-registry",
@@ -80,14 +80,14 @@
     "lexical": "^0.31.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
-    "next": "15.4.10",
+    "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "openai": "^4.96.2",
     "posthog-js": "^1.236.1",
-    "react": "^19.0.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.6.7",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.4",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.7",
@@ -110,6 +110,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^16.1.6",
     "@ngard/tiny-isequal": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
@@ -117,12 +118,14 @@
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.13",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.10",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
