--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-devtools": "^5.91.3",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/extension-character-count": "^3.19.0",
-    "@tiptap/extension-mention": "^3.19.0",
-    "@tiptap/extension-placeholder": "^3.19.0",
-    "@tiptap/react": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
-    "@tiptap/suggestion": "^3.19.0",
+    "@tiptap/core": "^2.27.2",
+    "@tiptap/extension-character-count": "^2.27.2",
+    "@tiptap/extension-mention": "^2.27.2",
+    "@tiptap/extension-placeholder": "^2.27.2",
+    "@tiptap/pm": "^2.27.2",
+    "@tiptap/react": "^2.27.2",
+    "@tiptap/starter-kit": "^2.27.2",
+    "@tiptap/suggestion": "^2.27.2",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
     "@vercel/og": "^0.8.6",
