feat: switch to @ai-sdk/openai-compatible, remove Upstash/Redis, clean up provider config
- Swap @ai-sdk/openai to @ai-sdk/openai-compatible for broader provider support
- Remove @upstash/ratelimit and @upstash/redis dependencies
- Remove server-side rate limiting from generate-theme and community-themes
- Simplify error-response.ts by removing Z.ai-specific error codes
- Update .env.example with LLM_BASE_URL, LLM_API_KEY, LLM_*_MODEL_ID vars
- Update README with OpenAI-compatible provider docs and self-hosting guide

--- a/.env.example
+++ b/.env.example
@@ -19,21 +19,15 @@ GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_SECRET"
 GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
 GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
 
-###### AI (GLM / Zhipu AI) ######
-# Coding Plan: https://api.z.ai/api/coding/paas/v4 | Regular: https://api.z.ai/api/paas/v4 | China: https://open.bigmodel.cn/api/paas/v4
-GLM_BASE_URL="https://api.z.ai/api/coding/paas/v4"
-# API key from Z.ai: https://z.ai/model-api
-GLM_API_KEY="YOUR_GLM_API_KEY"
-# Model IDs (defaults shown — override as needed)
-GLM_BASE_MODEL_ID="glm-4.6v"           # Vision model for chat + image input
-GLM_THEME_MODEL_ID="glm-4.7"           # Flagship model for theme generation
-GLM_PROMPT_MODEL_ID="glm-4.7-flash"    # Fast model for prompt enhancement
+###### AI (any OpenAI-compatible provider) ######
+# Works with OpenRouter, OpenAI, Together, Groq, Novita, Ollama, etc.
+LLM_BASE_URL="https://openrouter.ai/api/v1"
+LLM_API_KEY="YOUR_API_KEY"
+# Model IDs (defaults shown — override to use any model your provider supports)
+LLM_BASE_MODEL_ID="google/gemini-2.5-flash"
+LLM_THEME_MODEL_ID="google/gemini-2.5-flash"
+LLM_PROMPT_MODEL_ID="google/gemini-2.5-flash"
 
 ###### GOOGLE FONTS ######
 # Get a Google Fonts API Key: https://developers.google.com/fonts/docs/developer_api
 GOOGLE_FONTS_API_KEY="YOUR_GOOGLE_FONTS_API_KEY"
-
-###### RATE LIMITING (Upstash Redis) ######
-# Create a free Redis database: https://console.upstash.com/
-UPSTASH_REDIS_REST_URL="YOUR_UPSTASH_REDIS_REST_URL"
-UPSTASH_REDIS_REST_TOKEN="YOUR_UPSTASH_REDIS_REST_TOKEN"
